Bump testR8Lib unified test runner to JDK 25
Change-Id: I57a64558e0b25d82d8eb6417b341154878906f9e