@@ -365,7 +365,7 @@ tasks {
         "--classfile",
         "--debug",
         "--lib",
-        "${getJavaHome(Jdk.JDK_21)}",
+        "${getJavaHome(Jdk.JDK_25)}",
         "--classpath",
         "$r8Jar",
         "--classpath",
@@ -531,7 +531,8 @@ tasks {
     systemProperty("R8_SWISS_ARMY_KNIFE", swissArmyKnifeJar)
     systemProperty("R8_WITH_RELOCATED_DEPS", r8WithRelocatedDepsJar)
 
-    javaLauncher = getJavaLauncher(Jdk.JDK_21)
+    javaLauncher = getJavaLauncher(Jdk.JDK_25)
+    jvmArgs("--enable-preview")
 
     reports.junitXml.outputLocation.set(getRoot().resolveAll("build", "test-results", "test"))
     reports.html.outputLocation.set(getRoot().resolveAll("build", "reports", "tests", "test"))
